--- a/project/app/src/main/res/layout/content_main.xml
+++ b/project/app/src/main/res/layout/content_main.xml
@@ -19,8 +19,9 @@
 
     <Button
         android:id="@+id/button_id"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="sendMessage[MainActivity]"
         android:text="@string/self_destruct" />
 
 </android.support.constraint.ConstraintLayout>
